--- a/.github/workflows/push-docs.yml
+++ b/.github/workflows/push-docs.yml
@@ -31,6 +31,7 @@ jobs:
         run: |
           cd ../docs-repo
           git init
+          git checkout -b main
           git remote add origin https://x-access-token:${{ secrets.DOCS_REPO_TOKEN }}@github.com/ashrafbinahmad/docs.quickwire.git
           git add .
           git commit -m "Sync from main repo: $GITHUB_SHA" || echo "No changes to commit"
