--- a/.github/workflows/push-docs.yml
+++ b/.github/workflows/push-docs.yml
@@ -19,8 +19,8 @@ jobs:
 
       - name: Set up Git
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "ashrafbinahmad"
+          git config --global user.email "ashrafp216@gmail.com"
 
       - name: Copy files from docs/ to temp folder
         run: |
