--- a/.github/workflows/push-docs.yml
+++ b/.github/workflows/push-docs.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Copy files from docs/ to temp folder
         run: |
           mkdir ../docs-repo
-          cp -r docs/* ../docs-repo/
+          cp -r docs/* docs/.* ../docs-repo/
 
       - name: Push to external repo
         run: |
