--- a/docs/package.json
+++ b/docs/package.json
@@ -10,13 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.400.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-syntax-highlighter": "^15.5.0",
-    "framer-motion": "^11.0.0",
-    "lucide-react": "^0.400.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "shiki": "^3.12.1",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
