--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "prebuild": "tsx scripts/cli.ts",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "tsx prisma/seed.ts",
+    "test-auth": "tsx scripts/test-auth.ts"
   },
   "packageManager": "npm@11.3.0",
   "dependencies": {
     "@prisma/client": "^6.14.0",
     "@tanstack/react-query": "^5.85.3",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
+    "axios": "^1.11.0",
+    "bcryptjs": "^3.0.2",
     "chokidar": "^4.0.3",
     "concurrently": "^9.2.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.4.6",
-    "prisma": "^6.14.0",
     "quickwire": "^0.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -33,6 +39,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
+    "prisma": "^6.15.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
