--- a/scripts/package.json
+++ b/scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quickwire",
-  "version": "0.3.0",
+  "version": "0.9.0",
   "description": "Automatic API generator for Next.js applications that creates API routes and TypeScript client functions from backend functions",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -22,7 +22,7 @@
     "prisma",
     "react"
   ],
-  "author": "Quickwire Team",
+  "author": "Ashraf P",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -45,9 +45,9 @@
     "typescript": ">=4.0.0"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "chokidar": "^4.0.3",
-    "turbo": "^2.5.6",
-    "typescript": "^5.0.0"
+    "turbo": "^2.5.6"
   },
   "devDependencies": {
     "@types/node": "^20.0.0"
